src/objects/Request_FieldId_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Store some field ids which are used in javascript codes in a custom button &apos;create secondary request&apos;.</description>
    <fields>
        <fullName>Business_Unit_Primary__c</fullName>
        <label>Business Unit Primary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Molecule_multi__c</fullName>
        <label>Molecule multi</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Request__c</fullName>
        <label>Primary Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Therapeutic_Area__c</fullName>
        <label>Primary Therapeutic Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RWD_Inventory__c</fullName>
        <label>Data Asset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RWE_AppId__c</fullName>
        <label>RWE_AppId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RWE_Request_Keyfix__c</fullName>
        <label>RWE_Request_Keyfix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RWE_Request_Request_Molecule__c</fullName>
        <label>RWE Request (Request Molecule)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RWE_Study_Study_Molecule__c</fullName>
        <label>RWE Study (Study Molecule)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_1__c</fullName>
        <description>RWE Data Load and/or Technical Assessment Record Type Id</description>
        <label>Record Type 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <label>Related Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Functional_Area__c</fullName>
        <label>Requestor Functional Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <label>Requestor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Alias_Project_ID__c</fullName>
        <label>Study Alias Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_Primary_Req_Molecule__c</fullName>
        <label>Therapeutic Area (Primary) Req Molecule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_Primary_Stu_Molecule__c</fullName>
        <label>Therapeutic Area (Primary) Stu Molecule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RWE Request FieldId Settings</label>
</CustomObject>